change background-color for dev

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,7 +10,7 @@
 @import "typography/font";
 
 // only for dev purposes
-body { background-color: $clSecondary; }
+body { background-color: $clPrimary; }
 
 // components
 @import "components/navbar";
