--- a/resources/assets/sass/components/navbar.scss
+++ b/resources/assets/sass/components/navbar.scss
@@ -11,13 +11,16 @@ $navSecondaryMenueHeight: $navbarHeight - 20px;
 // component
 @include component(navbar) {
 
-    position: relative;
+    position: absolute;
+    top: 0; right: 0; left: 0;
     margin: 0;
     height: $navbarHeight;
     width: 100%;
 
     border-radius: 0;
     border: 0;
+
+    z-index: 1000;
     
     @include part(brand) {
         display: block;
