--- a/resources/assets/sass/typography/font.scss
+++ b/resources/assets/sass/typography/font.scss
@@ -6,8 +6,10 @@
 
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
 
 $fontFamily: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$fontFamilyCondensed: "Open Sans Condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 @mixin text($weight:"normal") {
     color: $clText;
@@ -15,9 +17,15 @@ $fontFamily: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
     line-height: 125%;
     font-weight: 400;
+    text-transform: normal;
+    font-smoothing:antialiased;
+
     @if ($weight == "bold") {
         font-weight: 700    ;
     }
-    text-transform: normal;
-    font-smoothing:antialiased;
+    @if ($weight == "condensed") {
+        font-family: $fontFamilyCondensed;
+        font-weight: 300;
+    }
+  
 }
