--- a/resources/assets/sass/vars/colors.scss
+++ b/resources/assets/sass/vars/colors.scss
@@ -14,6 +14,8 @@ $clSecondaryLight:  rgb(220, 220, 220);
 // app-colors
 $clPaper:           rgb(255, 255, 255);
 $clNeutral:         $clSecondaryLight;
+$clShadow:          #111;
+
 
 // text-colors
 $clText:            $clSecondaryDark;
