--- a/resources/assets/sass/base/_styles.scss
+++ b/resources/assets/sass/base/_styles.scss
@@ -6,4 +6,8 @@
 
 @include border-box-sizing;
 
-body {margin:0;padding:0;}
+body {
+    margin:0;
+    padding:0;
+    background-color: $clPaper;
+}
