--- a/resources/assets/sass/components/slider.scss
+++ b/resources/assets/sass/components/slider.scss
@@ -76,6 +76,6 @@ $sliderHeight: 600px;
     @include part(filter) {
         position: absolute;
         top: 0; right: 0; bottom: 0; left: 0;
-        background-color: rgba($clPrimary, 0.6);
+        background-color: get-color('primary');
     }
 }
