adding some sass functions

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,6 +6,8 @@
 // Settings & Globals
 @import "base/susy";
 @import "base/colors";
+@import "base/rhythm";
+@import "base/border-radius";
 @import "base/typography";
 @import "base/styles";
 
