--- a/resources/assets/sass/components/navbar.scss
+++ b/resources/assets/sass/components/navbar.scss
@@ -5,8 +5,8 @@
  */
 
 // variables
-$navbarHeight: 70px;
-$navSecondaryMenueHeight: $navbarHeight - 20px;
+$navbarHeight: v-rhythm(10);
+$navSecondaryMenueHeight: $navbarHeight - v-rhythm(3);
 
 // component
 @include component(navbar) {
@@ -26,10 +26,10 @@ $navSecondaryMenueHeight: $navbarHeight - 20px;
         display: block;
         position: absolute;
         top: 0; left: 0;
-
-        height: $navbarHeight;
-        padding: 18px ($navbarHeight/2 + 10px)  18px 20px;  
         
+        padding: v-rhythm(2.5) h-rhythm(6) v-rhythm(2.5) h-rhythm(3);
+        height: $navbarHeight;
+
         background-color: get-color('background');
         border-bottom-right-radius: $navbarHeight;
     }
@@ -39,7 +39,7 @@ $navSecondaryMenueHeight: $navbarHeight - 20px;
 
         @include part(menue) {
             @include span(12);
-            padding-top: 15px;
+            padding-top: v-rhythm(2);
             list-style-type: none;
             
             li { 
@@ -53,9 +53,11 @@ $navSecondaryMenueHeight: $navbarHeight - 20px;
             a {
                 display: block;
                 position: relative;
-                margin-right: 5px;
-                padding: 12px 15px;
+                margin-right: h-rhythm(1);
+                padding: v-rhythm(2) h-rhythm(2);
+                
                 @include text("bold");    
+                @include type-setting(0);
                 color: get-color('text-negative');
                 text-transform: uppercase;
                 letter-spacing: 1px;
@@ -69,11 +71,10 @@ $navSecondaryMenueHeight: $navbarHeight - 20px;
             @include part(submenue) {
                 display: none;
                 position: absolute;
-                left: 0;
-                width: 200px;
+                left: v-rhythm(2);
 
-                margin-left: 12px;
-                padding: 15px;
+                width: v-rhythm(30);
+                padding: v-rhythm(2);
                 
                 list-style-type: none;
                 background-color: get-color('background');
@@ -91,16 +92,17 @@ $navSecondaryMenueHeight: $navbarHeight - 20px;
                 }
                 a {
                     display: inline-block;
-                    padding: 9px 10px;
+                    padding: v-rhythm(1) h-rhyhtm(2);
                     width: 100%;
                     
                     @include text("bold");
+                    @include type-setting(0);
                     color: get-color('secondary');
                     letter-spacing: 0px;
                     text-transform: none;
 
                     &:hover { color: get-color('primary'); }
-                    .fa { margin-right: 6px; }
+                    .fa { margin-right: v-rhythm(1); }
                 }
             }
         }
@@ -114,7 +116,7 @@ $navSecondaryMenueHeight: $navbarHeight - 20px;
         
         @include part(menue) {
             list-style-type: none;
-            padding: 10px;
+            padding: v-rhythm(2);
 
             li { float: left; }
 
