--- a/resources/assets/sass/components/navbar.scss
+++ b/resources/assets/sass/components/navbar.scss
@@ -39,6 +39,11 @@ $navSecondaryMenueHeight: $navbarHeight - v-rhythm(3);
 
         @include part(menue) {
             @include span(12);
+
+            @include breakpoint(bp-until('macbook')) {
+                @include span(8);
+                @include push(2);
+            }
             padding-top: v-rhythm(2);
             list-style-type: none;
             
