--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,4 +1,4 @@
-@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "node_modules/susy/sass/susy";
 @import "node_modules/csstyle/csstyle";
 @import "node_modules/font-awesome/css/font-awesome";
@@ -10,10 +10,16 @@
 @import "base/rhythm";
 @import "base/border-radius";
 @import "base/typography";
-@import "base/styles";
 @import "base/breakpoints";
+
+// utils
+@import "utils/dev-helpers";
+
+// Globale basic styling
+@import "node_modules/normalize.css/normalize";
+@import "base/styles";
 
 // components
 @import "components/navbar";
-@import "components/slider";
+// @import "components/slider";
 
