--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,14 +12,14 @@
 @import "base/typography";
 @import "base/breakpoints";
 
-// utils
+// Utils
 @import "utils/dev-helpers";
 
 // Globale basic styling
 @import "node_modules/normalize.css/normalize";
 @import "base/styles";
 
-// components
+// Components
 @import "components/navbar";
 // @import "components/slider";
 
