Add global layer variable for z-indexes

--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -10,6 +10,7 @@
 // Global settings & variables
 @import 'base/rhythm'
 @import 'base/colors'
+@import 'base/layers'
 @import 'base/global-styles'
 
 // Uitls
