--- a/resources/assets/stylus/components/navbar.styl
+++ b/resources/assets/stylus/components/navbar.styl
@@ -16,6 +16,7 @@ navbar_height = rhythm(12)
 .Navbar
     see()
     // structure
+    z-index  : layer.navbar
     absolute : top left right
     height   : navbar_height
     cleafix()
