--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -11,11 +11,14 @@
 @import 'base/rhythm'
 @import 'base/colors'
 @import 'base/layers'
-@import 'base/global-styles'
+@import 'base/typographic'
 
-// Uitls
+// Utils
 @import 'utils/dev-helpers'
 @import 'utils/border-box'
+
+// styles on global elements
+@import 'base/global-styles'
 
 // Components
 @import 'components/navbar.styl'
