--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -21,4 +21,5 @@
 @import 'base/global-styles'
 
 // Components
-@import 'components/navbar.styl'
+@import 'components/Navbar'
+@import 'components/Slider'
