--- a/resources/assets/stylus/base/layers.styl
+++ b/resources/assets/stylus/base/layers.styl
@@ -6,5 +6,9 @@
 
 layer = {
     navbar : 1000
-    slider : 900
+    slider : {
+        body     : 900
+        images   : 0
+        headline : 100
+    }
 }
