--- a/resources/assets/stylus/components/Slider.styl
+++ b/resources/assets/stylus/components/Slider.styl
@@ -14,13 +14,17 @@ slider_height = rhythm(100)
     z-index  : layer.slider.body
     height   : slider_height
     width    : 100%;
+    // theme-style
+    background-color : color.background
 
 .Slider__images
     // structure
     z-index  : layer.slider.images
     absolute : top right bottom left
     overflow : hidden
-
+    // theme-style
+    border-bottom-left-radius: rhythm(25)
+    
 .Slider__images ul
     // structure
     absolute : top right bottom left
