Teaser styling: styling & advert

--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -21,6 +21,9 @@
 @import 'base/global-styles'
 
 // Components
+@import 'components/Button'
 @import 'components/Navbar'
 @import 'components/Slider'
 @import 'components/Clients'
+@import 'components/Teaser'
+@import 'components/Filmhero'
