--- a/resources/assets/stylus/base/layers.styl
+++ b/resources/assets/stylus/base/layers.styl
@@ -7,8 +7,14 @@
 layer = {
     navbar : 1000
     slider : {
-        body     : 900
-        images   : 0
-        headline : 100
+        _body    : 900
+        images   : 910
+        headline : 920
     }
+    clients : 800
+    teaser  : {
+        _body    : 700
+        filmhero : 710
+        body     : 720        
+    } 
 }
