--- a/resources/assets/stylus/components/Slider.styl
+++ b/resources/assets/stylus/components/Slider.styl
@@ -11,7 +11,7 @@ slider_height = rhythm(100)
 .Slider
     // structure
     position : relative
-    z-index  : layer.slider.body
+    z-index  : layer.slider._body
     height   : slider_height
     width    : 100%;
     // theme-style
