--- a/resources/assets/stylus/base/colors.styl
+++ b/resources/assets/stylus/base/colors.styl
@@ -5,12 +5,13 @@
  */
  
  color = {
-    primary       : rgb(217, 0, 17)
-    secondary     : rgb(96, 96, 96)
-    foreground    : rgb(220, 220, 220)
-    background    : rgb(255, 255, 255)
-    shadow        : rgb(0, 0, 0)
-    text          : rgb(48, 48, 48)
-    text_negative : rgb(255, 255, 255)
+    primary        : rgb(217, 0, 17)
+    secondary      : rgb(96, 96, 96)
+    secondary_dark : rgb(48, 48, 48)
+    foreground     : rgb(220, 220, 220)
+    background     : rgb(255, 255, 255)
+    shadow         : rgb(0, 0, 0)
+    text           : rgb(48, 48, 48)
+    text_negative  : rgb(255, 255, 255)
  }
  
