Teaser styling: folation

--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -26,4 +26,6 @@
 @import 'components/Slider'
 @import 'components/Clients'
 @import 'components/Teaser'
+@import 'components/Teaser-folation'
+@import 'components/Teaser-sunprotection'
 @import 'components/Filmhero'
