--- a/resources/assets/stylus/base/layers.styl
+++ b/resources/assets/stylus/base/layers.styl
@@ -13,8 +13,13 @@ layer = {
     }
     clients : 800
     teaser  : {
-        _body    : 700
-        filmhero : 710
-        body     : 720        
+        folation : {
+            _body    : 700
+            filmhero : 701
+            body     : 705
+        }
+        sunprotection : {
+            _body : 710
+        }        
     } 
 }
