--- a/resources/assets/stylus/components/Filmhero.styl
+++ b/resources/assets/stylus/components/Filmhero.styl
@@ -8,6 +8,6 @@
 .Filmhero
     // structure
     absolute: top right bottom left
-    z-index: layer.teaser.filmhero
+    z-index: layer.teaser.folation.filmhero
     // theme-style
-    background: url('/images/filmcollection.jpg') center -250px no-repeat
+    background: url('/images/teaser/filmcollection.jpg') center -250px no-repeat
