--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -29,3 +29,4 @@
 @import 'components/Teaser-folation'
 @import 'components/Teaser-sunprotection'
 @import 'components/Filmhero'
+@import 'components/Footer'
