--- a/resources/assets/stylus/components/Teaser.styl
+++ b/resources/assets/stylus/components/Teaser.styl
@@ -14,9 +14,14 @@
     overflow : hidden
     // theme-style
     border-bottom-left-radius : rhythm(25)
-    box-shadow: 0 8px 15px color.shadow
+    box-shadow : 0 8px 15px color.shadow
 
 .Teaser.-overhead
     // structure
-    margin-top: rhythm(25) * (-1)
-    padding-top: rhythm(25) + rhythm(10)
+    margin-top  : rhythm(25) * (-1)
+    padding-top : rhythm(25) + rhythm(10)
+
+.Teaser.-last
+    // theme-style
+    border-radius : 0
+    box-shadow    : none
