Product-page-template styles

--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -29,4 +29,9 @@
 @import 'components/Teaser-folation'
 @import 'components/Teaser-sunprotection'
 @import 'components/Filmhero'
+@import 'components/Hero'
+@import 'components/Product'
+@import 'components/ContactMaker'
+@import 'components/Benefits'
+@import 'components/PictureWall'
 @import 'components/Footer'
