--- a/resources/assets/stylus/base/layers.styl
+++ b/resources/assets/stylus/base/layers.styl
@@ -22,4 +22,19 @@ layer = {
             _body : 710
         }        
     } 
+    hero : {
+        _body   : 500
+        picture : 550
+        filter  : 560
+        caption : 580
+        title   : 590
+    }
+    contactmaker : {
+        _body : 400
+    }
+    benefits : {
+        _body      : 300
+        background : 310
+        content    : 350
+    }
 }
