--- a/resources/assets/stylus/base/typographic.styl
+++ b/resources/assets/stylus/base/typographic.styl
@@ -4,10 +4,13 @@
  *
  */
  
-@import url(https://fonts.googleapis.com/css?family=Open\+Sans:400,700\|Open\+Sans\+Condensed:300)
+@import url(https://fonts.googleapis.com/css?family=Open\+Sans:300,400,700\|Open\+Sans\+Condensed:300)
 
 // font-stacks
 type-family(type = default)    
+    if type == light
+        font-family: 'Open Sans', 'Neue Helvetica', Helvetica, Arial, sans-serif
+        font-weight: 300
     if type == default
         font-family: 'Open Sans', 'Neue Helvetica', Helvetica, Arial, sans-serif
         font-weight: 400
@@ -46,6 +49,6 @@ type = {
 // mixin
 type-size(scale = default)
     font-size: type.size[scale]
-    line_height: type.line_height[scale]
+    line-height: type.line_height[scale]
 
 
