--- a/resources/assets/stylus/components/Teaser-sunprotection.styl
+++ b/resources/assets/stylus/components/Teaser-sunprotection.styl
@@ -28,7 +28,7 @@ teaser-sunprotection_height = rhythm(50)
 
 .Teaser-sunprotection__splitter > a img
     // structure
-    min-height : 100%
+    min-height : (teaser-sunprotection_height + rhythm(25))
     min-width  : 100%
 
 .Teaser-sunprotection__splitter > a .Button
